# FlutterPi-plugin-bridge

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  README.md  config.h.in
.github/workflows/: cmake.yml  codeql-buildscript.sh  release.yml
plugin_lists/: openautoflutter.json
src/: compositor_ng.c  compositor_ng.h  cursor.h  dmabuf_surface.h  dummy_render_surface.h  egl.h  egl_gbm_render_surface.c  egl_gbm_render_surface.h  event_loop.h  filesystem_layout.c  filesystem_layout.h  flutter-drm-embedder.c  flutter-drm-embedder.h  flutter-pi.c  flutter-pi.h  frame_scheduler.h  gl_renderer.c  gl_renderer.h  gles.h  keyboard.h  locales.c  locales.h  main.c  modesetting.c  modesetting.h  notifier_listener.h  pixel_format.h  platformchannel.c  platformchannel.h  plugin_loader.c  plugin_loader.h  pluginregistry.c  pluginregistry.h  render_surface.h  render_surface_private.h  surface.c  surface.h  surface_private.h  texture_registry.c  texture_registry.h  (+10 more)
src/flutter_linux_gtk_shim/: fl_binary_messenger.c  fl_binary_messenger_internal.h  fl_event_channel.c  fl_method_call.c  fl_method_call_internal.h  fl_method_channel.c  fl_method_codec.c  fl_method_response.c  fl_plugin_registrant.c  fl_plugin_registrar.c  fl_plugin_registrar_internal.h  fl_plugin_registry.c  fl_standard_method_codec.c  fl_texture_gl.c  fl_texture_registrar.c  fl_texture_registrar_internal.h  fl_value.c  flutter_drm_embedder_shim.h  flutterpi_shim.h  openautoflutter_registrant.c  shim_test_plugin.c  shim_test_plugin.h
src/plugins/: charset_converter.c  gstreamer_video_player.h  raw_keyboard.c  services.c  testplugin.c  testplugin.h  text_input.c
src/plugins/audioplayers/: player.c  plugin.c
src/plugins/gstreamer_video_player/: frame.c  player.c  plugin.c
src/plugins/sentry/: sentry.c
src/util/: asserts.h  collection.h  geometry.h  lock_ops.h  logging.h  refcounting.h  uuid.h
test/: CMakeLists.txt  flutter_drm_embedder_test.c  flutterpi_test.c
